# Student-Grade-Manager

./: .gitignore  CMakeLists.txt  README.md  database.cpp  database.h  main.cpp  student.cpp  student.h  utils.cpp  utils.h
